--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -5,6 +7,7 @@
   <title>Texas Hold'em</title>
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css">
   <script src="https://cdn.jsdelivr.net/npm/pokersolver@2.1.4/pokersolver.min.js"></script>
   <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 </head>
@@ -33,18 +36,29 @@
   <button id="start-game" class="hidden wide_button">ゲーム開始</button>
 </div>
 
+<div id="table-wrapper">
 <div id="table" class="hidden">
 
+  <div id="players-wrapper">
+    <div id="players"></div>
+  </div>
+
   <div id="board-area">
-    <div id="board"></div>
-    <div id="deck"></div>
+    <div id="board-row">
+      <div id="board"></div>
+      <div id="deck"><div class="card back"></div></div>
+    </div>
     <div id="pot">Pot: 0</div>
     <div id="phase">Phase: preflop</div>
     <!-- <div id="result"></div> -->
   </div>
 
-  <div id="players-wrapper">
+  <!-- <div id="players-wrapper">
     <div id="players"></div>
+  </div> -->
+
+  <div id="me-wrapper">
+    <div id="player-me"></div>
   </div>
 
   <div id="controls">
@@ -54,6 +68,7 @@
     <button id="next-hand">NextHand</button>
   </div>
 
+</div>
 </div>
 
 <script src="js/net.js"></script>
