--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 </div>
 
 <script src="js/net.js"></script>
+<script src="js/se.js"></script>
+<script src="js/bgm.js"></script>
 <script src="js/ui.js"></script>
 <script src="js/lobby.js"></script>
 <script src="js/game.js"></script>
